--- a/form_web/style.css
+++ b/form_web/style.css
@@ -39,37 +39,6 @@
     height: 75px;
 }
 
-.area-formulario {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.formulario {
-    width: 350px;
-    height: 400px;
-    padding: 35px;
-    display: flex;
-    align-items: center;
-    padding-top: 20rem;
-}
-
-.formulario form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.formulario input {
-    margin-top: 10px;
-    height: 45px;
-    outline: none;
-    border-radius: 15px;
-    padding-left: 10px;
-    border-radius: 10px;
-    margin-left: 4px;
-}
-
 input::placeholder {
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
@@ -84,15 +53,6 @@ img {
     height: 30px;
 }
 
-form [type="submit"] {
-    background: #00853B;
-    border-radius: 10px;
-    border: none;
-    color: #fff;
-    width: 50%;
-    height: 40px;
-    font-size: 15px;
-}
 
 label {
     font-family: Arial, Helvetica, sans-serif;
@@ -111,7 +71,7 @@ label {
 }
 
 footer img{
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     overflow: visible !important;
@@ -119,7 +79,15 @@ footer img{
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: 500px; /* Descer footer */
 }
+
+.row{
+display: flex;
+}
+
+/* FORM-PART */
+
 
 fieldset {
     display: center;
@@ -135,6 +103,103 @@ fieldset {
     border-radius: 8px;  
     border: none;  
 }
-.row{
-display: flex;
+
+
+
+.area-formulario {
+    display: flex;
+    justify-content: center;
+    margin-right: 30px;
 }
+
+.formulario {
+    width: 350px;
+    height: 400px;
+    padding: 35px;
+    display: flex;
+    align-items: center;
+    padding-top: 20rem;
+}
+
+.formulario form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    
+}
+
+
+.formulario input {
+    margin: 0.6rem 0;
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 9px #0000001c;
+    font-size: 0.8rem;
+    margin-right: 10px;
+    
+   
+}
+
+.formulario input:hover{
+    background-color: #eeeeee75;
+}
+
+
+.formulario input:focus-visible{
+    outline: 1px solid #6c63ff;
+}
+
+
+/* CURSO CHOICE */
+
+.curso-title  {
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: #000000c0;
+    margin-top: 0.7rem;
+}
+
+.input-box input::placeholder {
+    color: #000000be;
+}
+
+.curso-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.62rem;
+    padding: 0 .5rem;
+}
+
+.curso-input {
+    display: flex;
+    align-items: center;
+}
+
+.curso-input input {
+    margin-right: 0.35rem;
+}
+
+.curso-input label {
+    font-size: 0.81rem;
+    font-weight: 600;
+    color: #000000c0;
+}
+.row select {
+        margin: 0.6rem 0;
+        padding: 0.8rem 1.2rem;
+        border: none;
+        border-radius: 10px;
+        box-shadow: 1px 1px 9px #0000001c;
+        font-size: 0.8rem;
+        margin-right: 10px;
+        
+        }
+.row select:hover{
+    background-color: #eeeeee75;
+}
+
+.row sele:focus-visible{
+    outline: 1px solid #6c63ff;
+}
+
