--- a/form_web/style.css
+++ b/form_web/style.css
@@ -75,15 +75,17 @@ footer img{
     left: 0;
     bottom: 0;
     overflow: visible !important;
-    height: 140px;
+    height: 10em;
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-top: 500px; /* Descer footer */
+    margin-top: 10%; /* Descer footer */
 }
 
 .row{
 display: flex;
+margin-right: 100px;
+
 }
 
 /* FORM-PART */
@@ -91,17 +93,15 @@ display: flex;
 
 fieldset {
     display: center;
-    margin-left: -50px; 
-    margin-right: 200px; 
+  margin:70% auto 60% auto ;
     padding-top: 12px;
     padding-bottom: 10px;
     padding-left: 15px;
     padding-right: 15px;
     border: 3px solid black;
-    margin-top: 200px;
-    margin-bottom: 200px;
     border-radius: 8px;  
     border: none;  
+    
 }
 
 
@@ -109,7 +109,8 @@ fieldset {
 .area-formulario {
     display: flex;
     justify-content: center;
-    margin-right: 30px;
+  
+ 
 }
 
 .formulario {
@@ -119,24 +120,25 @@ fieldset {
     display: flex;
     align-items: center;
     padding-top: 20rem;
+
 }
 
 .formulario form {
     display: flex;
     flex-direction: column;
-    width: 100%;
+   
     
 }
 
 
 .formulario input {
-    margin: 0.6rem 0;
+    margin: 0.6rem 0.3rem;
     padding: 0.8rem 1.2rem;
     border: none;
     border-radius: 10px;
     box-shadow: 1px 1px 9px #0000001c;
     font-size: 0.8rem;
-    margin-right: 10px;
+
     
    
 }
@@ -206,27 +208,47 @@ fieldset {
 /* Tabela de notas*/
 
 table{
-    margin-top: 350px;
-    margin-left: 400px;
+    display: absolute;
+    width: 50%;
+    margin: 15% auto;
     border-collapse: collapse;
-    width: 40%;
     font-family: Arial, sans-serif;
     font-size: 14px;
     text-align: left;
+
 }
 table th{
     background: #f2f2f2;
-    padding: 10px;
+    padding: 3px;
     font-weight: bold;
     border-bottom: 2px solid #ddd;
     text-align: center;
 }
 
 table td{
-    padding: 20px;
+    padding: 6px;
     border-bottom: 1px solid #ddd ;
     text-align: center;
 }
 table tr:hover{
     background-color: #f5f5f5;
 }
+table input{
+    height: 30px;
+    width: 80px;
+}
+
+table input:focus-visible{
+    outline: 1px solid #6c63ff;
+}
+
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+    
+}
+input[type=number] { 
+   -moz-appearance: textfield;
+   appearance: textfield;
+
+}
+
