--- a/form_web/style.css
+++ b/form_web/style.css
@@ -54,7 +54,7 @@ img {
 }
 
 
-label {
+label{
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 300;
@@ -63,6 +63,8 @@ label {
     color: #000000;
     padding-top: 10px;
 }
+
+
 
 .submit {
     align-items: center;
@@ -93,7 +95,7 @@ margin-right: 100px;
 
 fieldset {
     display: center;
-  margin:70% auto 60% auto ;
+  
     padding-top: 12px;
     padding-bottom: 10px;
     padding-left: 15px;
@@ -101,6 +103,7 @@ fieldset {
     border: 3px solid black;
     border-radius: 8px;  
     border: none;  
+  
     
 }
 
@@ -108,9 +111,7 @@ fieldset {
 
 .area-formulario {
     display: flex;
-    justify-content: center;
-  
- 
+    margin-left: 35%;
 }
 
 .formulario {
