--- a/form_web/style.css
+++ b/form_web/style.css
@@ -34,6 +34,20 @@
     display: flex;
 }
 
+.col-0-vdc{
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 20px;  
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    color: #00A84A;
+    display: flex;
+}
+
+
 .col-0 img {
     width: 180px;
     height: 75px;
@@ -243,6 +257,7 @@ table input:focus-visible{
     outline: 1px solid #6c63ff;
 }
 
+/* tirar setas input number */
 input[type=number]::-webkit-inner-spin-button { 
     -webkit-appearance: none;
     
@@ -250,6 +265,17 @@ input[type=number]::-webkit-inner-spin-button {
 input[type=number] { 
    -moz-appearance: textfield;
    appearance: textfield;
+
+}
+
+/* butauuuun */
+
+.enviar{
+    height:40px ;
+    width: 80px;
+    margin-left:50% ;
+margin-bottom: -10000px;
+   
 
 }
 
