--- a/form_web/style.css
+++ b/form_web/style.css
@@ -1,8 +1,12 @@
 * {
+    padding: 0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+
+    
 
 .container-main-menu {
     border-bottom: 5px solid #00bd19;
@@ -30,6 +34,11 @@
     align-items: center;
     text-align: center;
     text-transform: uppercase;
+
+
+
+
+
     color: #00A84A;
     display: flex;
 }
@@ -107,34 +116,19 @@ margin-right: 100px;
 /* FORM-PART */
 
 
-fieldset {
-    display: center;
-  
-    padding-top: 12px;
-    padding-bottom: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    border: 3px solid black;
-    border-radius: 8px;  
-    border: none;  
-  
-    
-}
-
-
 
 .area-formulario {
     display: flex;
     margin-left: 35%;
 }
 
-.formulario {
-    width: 350px;
+.formulario { 
+
     height: 400px;
     padding: 35px;
     display: flex;
     align-items: center;
-    padding-top: 20rem;
+    padding-top: 20rem
 
 }
 
@@ -223,11 +217,12 @@ fieldset {
 /* Tabela de notas*/
 
 table{
-    display: absolute;
+    display: relative;
     width: 50%;
     margin: 15% auto;
+    margin-top: 200px;
     border-collapse: collapse;
-    font-family: Arial, sans-serif;
+    font-family: Arial,Helvetica,sans-serif; 
     font-size: 14px;
     text-align: left;
 
@@ -271,11 +266,249 @@ input[type=number] {
 /* butauuuun */
 
 .enviar{
-    height:40px ;
-    width: 80px;
-    margin-left:50% ;
-margin-bottom: -10000px;
-   
+    height:42px ;
+    width: 99px;
+    position: relative;
+    background-color: #178f12;
+    color: #ffffffff;
+    border-style:hidden ;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-bottom: 0px;
+    top: auto;
+    margin-left: 340px;
+    bottom: 150px;
+  
 
 }
+
+button.enviar{
+    left:400px;
+}
+
+
+
+@media (max-width: 1184px) {
+
+
+    button.enviar{
+    left: 200px;
+
+    }
+    
+    
+
+}
+
+
+@media (max-width: 1170px) {
+
+
+    button.enviar{
+    left: 200px;
+
+    }
+    
+    
+
+}
+
+
+@media (max-width: 928px) {
+
+
+    button.enviar{
+    left: 20px;
+    top:70px;
+
+    }
+    
+    
+
+}
+
+
+@media (max-width: 882px) {
+
+
+    button.enviar{
+    left: 20px;
+    top:70px;
+
+    }
+
+    table{
+        margin-top: 300px;
+    }
+    
+    
+
+}
+
+
+/* parei aq  */
+
+
+
+@media (min-width: 1160px) {
+
+
+.enviar{
+   margin-left: 880px;
+}
+
+
+table{
+    margin-left: 1900rem;
+    width: 60%;
+    margin: 15% auto;
+    border-collapse: collapse;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    text-align: left;
+
+}
+
+
+}
+
+
+@media (min-width: 1150px) {
+
+
+    .enviar{
+       margin-left: 880px;
+    }
+    
+    
+    table{
+        margin-left: 1900rem;
+        width: 60%;
+        margin: 15% auto;
+        border-collapse: collapse;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        text-align: left;
+    
+    }
+    
+    
+    }
+
+    @media (min-width: 1023px){
+
+        .enviar{
+            margin-left: 800px;
+         }
+
+         
+         .formulario{
+            margin-bottom: 100px;
+            position: center;
+            margin-right: 500px;
+         
+         }
+
+         .table{
+            display: flex;
+            align-items: center;
+         }
+
+
+
+    }
+
+
+    
+    @media (min-width: 890px){
+
+        .enviar{
+            margin-left: 700px;
+         }
+
+         
+         .formulario{
+            margin-bottom: 100px;
+            flex-direction:row ;
+            flex-wrap: wrap;
+            align-content: space-around;
+            justify-content: space-around;
+            align-items: normal;
+         
+           
+         
+         }
+
+         .table{
+            display: flex;
+            align-items: center;
+         }
+
+
+
+    }
+
+    
+
+    
+    @media (min-width: 888px){
+
+        .enviar{
+            margin-left: 700px;
+         }
+
+         
+         .formulario{
+            margin-bottom: 100px;
+            flex-direction:row ;
+            flex-wrap: wrap;
+            align-content: space-around;
+            justify-content: space-around;
+            align-items: normal;
+         
+           
+         
+         }
+
+         .area-formulario{
+            margin-right: 50rem;
+         }
+
+         .table{
+            display: flex;
+            align-items: center;
+            
+         }
+
+
+
+    }
+
+    @media (min-width: 320) {
+
+            .enviar{
+            margin-left: 7px;
+         }
+
+         
+         .formulario{
+            
+         
+           
+         
+         }
+
+         .area-formulario{
+            margin-right: 50rem;
+         }
+
+         .table{
+            display: flex;
+            align-items: center;
+            
+         }
+
+
+
+    }
 
